--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,10 +1,10 @@
-.main-splashpage-div{
+.main-splashpage-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.splash-header-img{
+.splash-header-img {
     width: 100%;
     height: 40em;
     /* margin-bottom: 100px; */
@@ -12,22 +12,22 @@
     object-fit: cover;
 }
 
-.splash-image-div{
+.splash-image-div {
     /* margin-bottom: -100px; */
 }
 
-.your-next-rev-text{
+.your-next-rev-text {
     font-size: 2em;
     font-weight: bold;
 }
 
-.next-rev-div{
+.next-rev-div {
     display: flex;
     justify-content: center;
     margin-top: 2em;
 }
 
-.suggested-reviews-div{
+.suggested-reviews-div {
     border: .1px solid gray;
     border-radius: 5px;
     display: flex;
@@ -35,7 +35,7 @@
     width: 25em;
 }
 
-.mapped-suggest-businesses-div{
+.mapped-suggest-businesses-div {
     display: grid;
     justify-content: center;
     grid-template-columns: auto auto;
@@ -48,61 +48,61 @@
 
 }
 
-.suggested-reviews-links{
+.suggested-reviews-links {
     text-decoration: none;
     color: black;
     display: flex;
 }
 
-.suggested-reviews-links:hover{
+.suggested-reviews-links:hover {
     text-decoration: underline;
 }
 
-.suggested-reviews-img{
+.suggested-reviews-img {
     height: 6em;
     width: 6em;
     padding-right: .5em;
     object-fit: contain;
 }
 
-.abcdef-div{
+.abcdef-div {
     /* display: flex; */
     /* justify-content: flex-end; */
 }
 
-.agddgaddga-div{
+.agddgaddga-div {
     /* display: flex;
     justify-content: flex-end; */
 }
 
-.star-buttons-sugg-review{
+.star-buttons-sugg-review {
     background: none;
     border: none;
     /* margin-bottom: 1px; */
 }
 
-.star-buttons-sugg-review:hover{
+.star-buttons-sugg-review:hover {
     background: yellow;
 }
 
-.sugg-review-business-name{
+.sugg-review-business-name {
     margin-top: -1px;
     padding-top: 6px;
 }
 
-.post-mapped-sugg-business-hr{
+.post-mapped-sugg-business-hr {
     margin-top: 3em;
     width: 100%;
 }
 
-.splash-page-categories-h2{
+.splash-page-categories-h2 {
     display: flex;
     justify-content: center;
     font-weight: bold;
     font-size: 2em;
 }
 
-.splash-page-category-divs{
+.splash-page-category-divs {
     border: .1px solid gray;
     border-radius: 3px;
     width: 10em;
@@ -113,15 +113,15 @@
     /* margin-top: 3em; */
 }
 
-.text-inside-category-div{
+.text-inside-category-div {
     padding-bottom: 2em;
 }
 
-.splash-page-category-divs:hover{
+.splash-page-category-divs:hover {
     box-shadow: rgba(124, 120, 120, 0.35) 0px 5px 15px;
 }
 
-.main-categories-div{
+.main-categories-div {
     display: grid;
     justify-content: center;
     grid-template-columns: auto auto auto auto;
@@ -130,26 +130,33 @@
     margin-bottom: 4em;
 }
 
-.splash-footer{
+.splash-footer {
     background-color: rgb(216, 203, 203);
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 }
 
-.splash-github-link{
+.splash-github-link {
     text-decoration: none;
     color: black;
     /* padding-top: 20px; */
+    /* padding-bottom: 1em; */
 }
 
-.splash-logo-img{
-    object-fit: cover;
-    height: 2.5em;
-    width: 2.5em;
+.splash-github-link:hover{
+    text-decoration: underline;
 }
 
-.category-div-links{
+.splash-logo-img {
+    object-fit: contain;
+    height: 2em;
+    width: 50px;
+    /* margin-top: .5em; */
+    padding-top: .3em;
+}
+
+.category-div-links {
     color: black;
     text-decoration: none;
 }
